@@ -1,3 +1,11 @@
+2002-10-21  Adam Fedor  <fedor@gnu.org>
+
+	* Source/x11/XIMInputServer.m
+	([XIMInputServer -initWithDelegate:display:name:]): Use
+	GSEncodingFromLocale.
+	* Source/xlib/XGFont.m ([XGFontInfo -setupAttributes]): Idem.
+	* Source/xlib/XftFontInfo.m ([XftFontInfo -setupAttributes]): Idem.
+
 2002-10-19  Adam Fedor  <fedor@gnu.org>
 
 	* Source/x11/XGServerEvent.m ([XGServer
